# MessToEmail

./: Cargo.toml  README.md
images/: Icon.icns
locales/: en.yml  zh-CN.yml
src/: lib.rs  main.rs
tests/: lib_tests.rs
