[package]
name = "MessToEmail"
version = "0.0.1"
edition = "2024"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys-locale = "0.3.0"
tray-icon = "0.9.0"
tao = "0.22.2"
rust-i18n = "2.2.1"
once_cell = "1.17.1"
serde_json = "1.0.95"
serde = "1.0.159"
home = "0.5.4"
auto-launch = "0.5.0"
native-dialog = "0.6.4"
macos-accessibility-client = "0.0.1"
enigo = "0.1.2"
clipboard = "0.5.0"
regex-lite = "0.1.0"

lettre = "0.11"
lettre_email = "0.9"
log = "0.4.26"
chrono = "0.4.40"



[package.metadata.i18n]
available-locales = ["en", "zh-CN"]
default-locale = "en"
load-path = "locales"

[package.metadata.bundle]
name = "MessToEmail"
identifier = "com.hope.MessToEmail"
icon = ["images/icon.icns"]
copyright = ""
short_description = "MessToEmail "
